# gpt-image-2-codex-skill

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
scripts/: gpt_image_2.py
