[project]
name = "codex-skill-gpt-image-2"
version = "0.1.0"
description = "Codex skill helper script for gpt-image-2 generation and editing."
requires-python = ">=3.10"
dependencies = [
    "openai>=2.32.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
